--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qs.js": "^0.1.12",
     "vue": "^2.6.12",
     "vue-cookies": "^1.7.4",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
   },
